--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,9 +63,10 @@ endif()
 
 # Declare the project.
 project(HydraViewportToolbox
-    VERSION     0.25.08.0
-    DESCRIPTION "Utilities to support graphics viewports using OpenUSD Hydra"
-    LANGUAGES   CXX
+    VERSION      0.25.08.0
+    DESCRIPTION  "Utilities to support graphics viewports using OpenUSD Hydra"
+    LANGUAGES    CXX
+    HOMEPAGE_URL https://github.com/Autodesk/hydra-viewport-toolbox
 )
 set(_VERSION "${HydraViewportToolbox_VERSION}")
 
