--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,7 @@ if (_HVT_PROJECT_IS_TOP_LEVEL AND APPLE)
 endif()
 
 # Set the default build type.
-set_if_not_defined(CMAKE_BUILD_TYPE "Release" "")
+set_if_not_defined(CMAKE_BUILD_TYPE "Release" "The build type")
 
 # Enable only the typical build types.
 set_if_not_defined(CMAKE_CONFIGURATION_TYPES "Debug;Release;MinSizeRel;RelWithDebInfo" "List of build types")
@@ -139,9 +139,6 @@ option(BUILD_SHARED_LIBS "Build dynamic libraries" ON)
 # Find OpenGL, which is mandatory for OpenUSD on Windows and macOS.
 if (WIN32 OR (APPLE AND NOT IOS))
     find_package(OpenGL REQUIRED)
-    if (NOT OpenGL_FOUND)
-        message(FATAL_ERROR "OpenGL was not found.")
-    endif()
 endif()
 
 get_cmake_property(_MULTI_CONFIG GENERATOR_IS_MULTI_CONFIG)
@@ -337,7 +334,7 @@ message(STATUS "-------------------------------------------")
 message(STATUS "Hydra Viewport Toolbox build configuration:")
 message(STATUS "  Platform                 : ${CMAKE_SYSTEM_NAME} [${CMAKE_SYSTEM}]")
 if (APPLE)
-    EXECUTE_PROCESS( COMMAND sysctl -n machdep.cpu.brand_string OUTPUT_VARIABLE COMPUTED_ARCHITECTURE )
+    execute_process(COMMAND sysctl -n machdep.cpu.brand_string OUTPUT_VARIABLE COMPUTED_ARCHITECTURE)
     message(STATUS "  Machine architecture     : ${COMPUTED_ARCHITECTURE}")
 endif()
 message(STATUS "  CMake                    : ${CMAKE_VERSION}")
@@ -355,6 +352,7 @@ else()
     message(STATUS "  Build type               : ${CMAKE_BUILD_TYPE}")
 endif()
 message(STATUS "  Warnings as errors       : ${ENABLE_WARNINGS_AS_ERRORS}")
+message(STATUS "  Enable unit tests        : ${ENABLE_TESTS}")
 message(STATUS "")
 message(STATUS "  OpenUSD build path       : ${OPENUSD_INSTALL_PATH}")
 if (_MULTI_CONFIG)
