--- a/source/namespace.h.in
+++ b/source/namespace.h.in
@@ -13,29 +13,29 @@
 // limitations under the License.
 #pragma once
 
-// Generate version defines from the CMake project version.
+/// Generate version defines from the CMake project version.
 #define HVT_MAJOR_VERSION ${HydraViewportToolbox_VERSION_MAJOR}
 #define HVT_MINOR_VERSION ${HydraViewportToolbox_VERSION_MINOR}
 #define HVT_PATCH_LEVEL   ${HydraViewportToolbox_VERSION_PATCH}
 #define HVT_VERSION (HVT_MAJOR_VERSION * 10000 + HVT_MINOR_VERSION * 100 + HVT_PATCH_LEVEL)
 
-// C preprocessor trickery to expand arguments.
+/// C preprocessor trickery to expand arguments.
 #define HVT_CONCAT(A, B) HVT_CONCAT_IMPL(A, B)
 #define HVT_CONCAT_IMPL(A, B) A##B
 
-// Versioned namespace includes the major version number.
-// Note: The goal is to define a namespace like 'HVT_NS_v0_25_03_adsk'.
+/// Versioned namespace includes the major version number.
+/// \note The goal is to define a namespace like 'HVT_NS_v0_25_03_adsk'.
 #define HVT_NS_MAJOR HVT_CONCAT(HVT_NS, _v${HydraViewportToolbox_VERSION_MAJOR})
 #define HVT_NS_MINOR HVT_CONCAT(HVT_NS_MAJOR, _${HydraViewportToolbox_VERSION_MINOR})
 #define HVT_NS_PATCH HVT_CONCAT(HVT_NS_MINOR, _${HydraViewportToolbox_VERSION_PATCH})
 #define HVT_NS HVT_CONCAT(HVT_NS_PATCH, ${_NS_ADSK})
 
-// NOTE: The namespace handling in this project is inspired by OpenUSD and the proposal
-// 'Option 2(d): Use an alias' in http://www.gotw.ca/publications/mill21.htm 
+/// NOTE: The namespace handling in this project is inspired by OpenUSD and the proposal
+/// 'Option 2(d): Use an alias' in http://www.gotw.ca/publications/mill21.htm 
 
-// Use 'HVT_NS' in the library code (i.e., header and source files).
+/// Use 'HVT_NS' in the library code (i.e., header and source files).
 namespace HVT_NS { };
 
-// Only consumers can use 'hvt' for concise writing.
-// Use an alias to avoid using 'hvt' in the library code (i.e., triggers a compilation error).
+/// Only consumers can use 'hvt' for concise writing.
+/// Use an alias to avoid using 'hvt' in the library code (i.e., triggers a compilation error).
 namespace hvt = HVT_NS;
