--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,19 +1,15 @@
 name: Bug Report
-description: Report a bug or unexpected behavior in Hydra Viewport Toolbox
+description: Report a bug or unexpected behavior
 title: "[Bug]: "
 labels: ["bug"]
 body:
-  - type: markdown
-    attributes:
-      value: |
-        Thanks for taking the time to report a bug! Please fill out the information below to help us diagnose and fix the issue.
-
   - type: textarea
     id: description
     attributes:
-      label: Description
-      description: A clear and concise description of what the bug is.
-      placeholder: Describe the bug you encountered...
+      label: Bug Description
+      description: What's the bug? What did you expect vs what happened?
+      placeholder: |
+        Describe the bug clearly and concisely...
     validations:
       required: true
 
@@ -21,71 +17,27 @@ body:
     id: reproduction
     attributes:
       label: Steps to Reproduce
-      description: Detailed steps to reproduce the behavior.
+      description: How can we reproduce this?
       placeholder: |
         1. Configure with '...'
         2. Load USD file '...'
-        3. Render with '...'
-        4. See error
-    validations:
-      required: true
-
-  - type: textarea
-    id: expected
-    attributes:
-      label: Expected Behavior
-      description: What did you expect to happen?
-      placeholder: Describe the expected behavior...
-    validations:
-      required: true
-
-  - type: textarea
-    id: actual
-    attributes:
-      label: Actual Behavior
-      description: What actually happened?
-      placeholder: Describe what actually happened...
-    validations:
-      required: true
-
-  - type: dropdown
-    id: hvt-version
-    attributes:
-      label: HVT Version
-      description: Which version of Hydra Viewport Toolbox are you using?
-      options:
-        - main branch (latest)
-        - v0.25.08
-        - Other (please specify in Additional Context)
-    validations:
-      required: true
-
-  - type: dropdown
-    id: platform
-    attributes:
-      label: Platform
-      description: What platform are you using?
-      options:
-        - Windows
-        - Linux
-        - macOS
+        3. See error
     validations:
       required: true
 
   - type: input
-    id: os-version
+    id: platform
     attributes:
-      label: OS Version
-      description: What version of the operating system?
-      placeholder: "e.g., Windows 11 23H2, Ubuntu 22.04, macOS 14.2"
+      label: Platform & Version
+      description: OS and version
+      placeholder: "e.g., Ubuntu 22.04, Windows 11, macOS 14"
     validations:
       required: true
 
   - type: dropdown
-    id: build-type
+    id: build-config
     attributes:
       label: Build Configuration
-      description: What build configuration were you using?
       options:
         - Debug
         - Release
@@ -94,86 +46,37 @@ body:
     validations:
       required: true
 
-  - type: dropdown
+  - type: input
     id: renderer
     attributes:
       label: Render Delegate
-      description: Which Hydra render delegate were you using?
-      options:
-        - Storm (OpenGL)
-        - Storm (Metal)
-        - Storm (Vulkan)
-        - Other/Custom
-        - Not applicable
-    validations:
-      required: true
-
-  - type: input
-    id: usd-version
-    attributes:
-      label: OpenUSD Version
-      description: What version of OpenUSD are you using?
-      placeholder: "e.g., v24.08, v23.11"
-
-  - type: input
-    id: compiler
-    attributes:
-      label: Compiler
-      description: What compiler and version?
-      placeholder: "e.g., MSVC 2022 17.8, GCC 11.4, Clang 15.0"
-
-  - type: input
-    id: gpu
-    attributes:
-      label: GPU/Graphics Card
-      description: What GPU are you using? (if relevant)
-      placeholder: "e.g., NVIDIA RTX 4090, AMD Radeon RX 7900, Intel Arc A770"
+      description: Which render delegate? (e.g., Storm OpenGL, Storm Metal, Storm Vulkan)
+      placeholder: "e.g., Storm (OpenGL)"
 
   - type: textarea
     id: logs
     attributes:
       label: Error Messages / Logs
-      description: Please paste any relevant error messages, stack traces, or log output.
+      description: Paste any error messages or stack traces
       render: shell
-      placeholder: |
-        Paste error messages or logs here...
-
-  - type: textarea
-    id: screenshots
-    attributes:
-      label: Screenshots / Visual Issues
-      description: If applicable, add screenshots or images showing the visual issue.
-      placeholder: Drag and drop images here or paste image URLs...
-
-  - type: textarea
-    id: sample-files
-    attributes:
-      label: Sample Files
-      description: If possible, provide a minimal USD file or test case that reproduces the issue.
-      placeholder: |
-        Attach or link to minimal reproduction files...
 
   - type: textarea
     id: additional
     attributes:
       label: Additional Context
-      description: Add any other context about the problem here.
+      description: Anything else? (HVT version, OpenUSD version, GPU, compiler, screenshots, sample files, etc.)
       placeholder: |
-        - Does this work in other configurations?
-        - When did this start happening?
-        - Any workarounds you've found?
-        - Related issues or discussions?
+        - HVT version: main/v0.25.08/etc
+        - OpenUSD version: 
+        - GPU: 
+        - Compiler:
+        - Screenshots or sample files:
 
   - type: checkboxes
     id: checklist
     attributes:
       label: Checklist
-      description: Please confirm the following
       options:
         - label: I have searched existing issues to ensure this is not a duplicate
           required: true
-        - label: I have provided all the information requested above
-          required: true
-        - label: I am willing to help test fixes for this issue
-          required: false
 
