Address code review comments
Signed-off-by: Patrick Hodoul <patrick.hodoul@autodesk.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
+# Visual Studio Code support
 .vscode/
+.vs/
+
+# Various generic subfolders
 build/
 install/
 out/
+
+# Project support
 include/hvt/namespace.h
-.vs/
 
 # Ignore user-specific CMake presets
 CMakeUserPresets.json
