Group Vulkan related find_package's.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -325,6 +325,10 @@ if(HVT_ENABLE_VULKAN)
     add_compile_definitions(ENABLE_VULKAN)
     find_package(VulkanLoader CONFIG REQUIRED)
     find_package(VulkanHeaders CONFIG REQUIRED)
+    # Add VMA include directory to fix vk_mem_alloc.h include issue.
+    find_package(VulkanMemoryAllocator CONFIG REQUIRED)
+    # SDL2 is required by the Vulkan tests.
+    find_package(SDL2 CONFIG REQUIRED)
 endif()
 
 #---------------------------------------------------------------------------------------------------
