Add build_type selection to test workflow
- Also include in ci-minimal and ci-tests, the new cmake presets

--- a/.github/workflows/ci-minimal.yaml
+++ b/.github/workflows/ci-minimal.yaml
@@ -14,7 +14,7 @@ on:
         required: false
         default: 'debug'
         type: choice
-        options: [debug, release]
+        options: [debug, release, relwithdebinfo, ubsan, asan]
 
 jobs:
   minimal-build:
