OGSMOD-8090: Enable Vulkan unit tests in Viewport Toolbox (#83)
* OGSMOD-8090: Enable Vulkan unit tests in Viewport Toolbox

* Fix Vulkan dependencies

Signed-off-by: Patrick Hodoul <Patrick.Hodoul@autodesk.com>

* Use SDL2 target

Signed-off-by: Patrick Hodoul <Patrick.Hodoul@autodesk.com>

* Improve cmake

Signed-off-by: Patrick Hodoul <patrick.hodoul@autodesk.com>

* Update presentTask

Signed-off-by: Patrick Hodoul <Patrick.Hodoul@autodesk.com>

* Update presentTask, part II

Signed-off-by: Patrick Hodoul <Patrick.Hodoul@autodesk.com>

* Update presentTask, part III

Signed-off-by: Patrick Hodoul <Patrick.Hodoul@autodesk.com>

* Disable Vulkan utests when using 'origin/dev'

Signed-off-by: Patrick Hodoul <Patrick.Hodoul@autodesk.com>

* Fix params.enablePresentation in the first pass of TestFramePasses_MultiViewportsClearDepth.

* Fix error message in RenderingUtils::compareImages.

* Restore presentation flag to true for depth aov.

* Improve blur utests

Signed-off-by: Patrick Hodoul <Patrick.Hodoul@autodesk.com>

* Update baseline images for macOS

Signed-off-by: Patrick Hodoul <patrick.hodoul@autodesk.com>

* Remove extra "/" in the path of the computed image.

* OGSMOD-8090: Enable Vulkan unit tests in Viewport Toolbox

* Fix Vulkan dependencies

Signed-off-by: Patrick Hodoul <Patrick.Hodoul@autodesk.com>

* Use SDL2 target

Signed-off-by: Patrick Hodoul <Patrick.Hodoul@autodesk.com>

* Improve cmake

Signed-off-by: Patrick Hodoul <patrick.hodoul@autodesk.com>

* Update presentTask

Signed-off-by: Patrick Hodoul <Patrick.Hodoul@autodesk.com>

* Update presentTask, part II

Signed-off-by: Patrick Hodoul <Patrick.Hodoul@autodesk.com>

* Update presentTask, part III

Signed-off-by: Patrick Hodoul <Patrick.Hodoul@autodesk.com>

* Disable Vulkan utests when using 'origin/dev'

Signed-off-by: Patrick Hodoul <Patrick.Hodoul@autodesk.com>

* Improve blur utests

Signed-off-by: Patrick Hodoul <Patrick.Hodoul@autodesk.com>

* Fix params.enablePresentation in the firs

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -135,6 +135,14 @@ target_link_libraries(${_TARGET}
         hvt_test_utils
 )
 
+# Link Vulkan only if enabled.
+if(HVT_ENABLE_VULKAN)
+    target_link_libraries(${_TARGET}
+        PRIVATE
+            Vulkan::Vulkan
+    )
+endif()
+
 #---------------------------------------------------------------------------------------------------
 
 # This section defines & discovers the unit tests.
