--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,9 @@ cmake_minimum_required(VERSION 3.26...3.31)
 # An option to enable tests.
 option(ENABLE_TESTS "Enable tests" ON)
 
+# An option to enable Vulkan.
+option(HVT_ENABLE_VULKAN "Enable Vulkan" OFF)
+
 # An option to tell vcpkg to only fetch release and not debug dependencies.
 option(HVT_RELEASE_ONLY_VCPKG_DEPS "Use a release-optimized vcpkg base triplet" OFF)
 
@@ -315,6 +318,17 @@ endif()
 # Add a DRAW_ORDER definition if the draw order feature is enabled.
 if (ENABLE_DRAW_ORDER)
     add_compile_definitions(DRAW_ORDER)
+endif()
+
+# Add Vulkan dependencies.
+if(HVT_ENABLE_VULKAN)
+    add_compile_definitions(ENABLE_VULKAN)
+    find_package(VulkanLoader CONFIG REQUIRED)
+    find_package(VulkanHeaders CONFIG REQUIRED)
+    # Add VMA include directory to fix vk_mem_alloc.h include issue.
+    find_package(VulkanMemoryAllocator CONFIG REQUIRED)
+    # SDL2 is required by the Vulkan tests.
+    find_package(SDL2 CONFIG REQUIRED)
 endif()
 
 #---------------------------------------------------------------------------------------------------
