Update follow Vulkan suuport

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -377,6 +377,8 @@ endif()
 message(STATUS "  OpenUSD version          : ${pxr_VERSION}")
 message(STATUS "  Autodesk OpenUSD pending : ${ENABLE_ADSK_OPENUSD_PENDING}")
 message(STATUS "")
+message(STATUS "  Vulkan                   : ${HVT_ENABLE_VULKAN}")
+message(STATUS "")
 message(STATUS "Features:")
 message(STATUS "  Draw order               : ${ENABLE_DRAW_ORDER}")
 message(STATUS "-------------------------------------------")
