Add a missing dependency
Signed-off-by: Patrick Hodoul <patrick.hodoul@autodesk.com>

--- a/source/sceneIndex/CMakeLists.txt
+++ b/source/sceneIndex/CMakeLists.txt
@@ -60,6 +60,7 @@ target_include_directories(${_TARGET}
 # between the OpenUSD targets change in the future.
 target_link_libraries(${_TARGET}
     PUBLIC hd
+    PRIVATE hvt_geometry hvt_dataSource
 )
 
 # Add the target to the export set for HVT.
