Add more utests
Signed-off-by: Patrick Hodoul <patrick.hodoul@autodesk.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -59,6 +59,7 @@ add_executable(${_TARGET}
     tests/testSearches.cpp
     tests/testTaskManager.cpp
     tests/testMultiSampling.cpp
+    tests/testVisualizeAOV.cpp
 )
 
 # Is the generator a multi-config one?
