Update names and validates on Windows/OpenGL
Signed-off-by: Patrick Hodoul <Patrick.Hodoul@autodesk.com>

--- a/source/tasks/CMakeLists.txt
+++ b/source/tasks/CMakeLists.txt
@@ -26,7 +26,7 @@ set(_SOURCE_FILES
     "fxaaTask.cpp"
     "resources.cpp"
     "ssaoTask.cpp"
-    "visualizeAOVComputeShader.cpp"
+    "visualizeAOVCompute.cpp"
     "visualizeAovTask.cpp"
 )
 
@@ -41,7 +41,7 @@ set(_HEADER_FILES
     "${_TASKS_INCLUDE_DIR}/ssaoTask.h"
     "${_TASKS_INCLUDE_DIR}/visualizeAovTask.h"
     # Private headers
-    "visualizeAOVComputeShader.h"
+    "visualizeAOVCompute.h"
 )
 
 # Define the library.
